Cleaning up secret_key/fernet_key settings

--- a/data/hardened_airflow.cfg
+++ b/data/hardened_airflow.cfg
@@ -137,7 +137,7 @@ load_examples = False
 plugins_folder = {AIRFLOW_HOME}/plugins
 
 # Secret key to save connection passwords in the db
-fernet_key = <key>
+fernet_key = {FERNET_KEY}
 
 # Whether to disable pickling dags
 donot_pickle = True
@@ -263,7 +263,7 @@ worker_refresh_batch_size = 1
 worker_refresh_interval = 30
 
 # Secret key used to run your flask app
-secret_key = <key>
+secret_key = {SECRET_KEY}
 
 # Number of workers to run the Gunicorn web server
 workers = 4
