Reverting stuff for FERNET key so it should be set by the user

--- a/data/hardened_airflow.cfg
+++ b/data/hardened_airflow.cfg
@@ -137,7 +137,7 @@ load_examples = False
 plugins_folder = {AIRFLOW_HOME}/plugins
 
 # Secret key to save connection passwords in the db
-fernet_key = {FERNET_KEY}
+fernet_key = <key>
 
 # Whether to disable pickling dags
 donot_pickle = True
